--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://arwa_admin:vYkt0Nq8xdnPbuNf@cluster0.zjjasmp.mongodb.net/game_engine?retryWrites=true&w=majority
-DB_NAME=game_engine
+MONGO_URI=[your_mongodb_connection_string]
+DB_NAME=[your_steamgames_db_name]
 PORT=8000
